syntax = "proto3";

package gaapicommon.enums;
option csharp_namespace = "GAAPICommon.Enums";

enum PositionControlStatus {
    OKPosition = 0;
    Disabled = 1;
    Disabling = 2;
    NoWaypoints = 3;
    OutOfPosition = 4;
    WaypointDiscontinuity = 5;
    UnknownPosition = 65535;
}