syntax = "proto3";

import "Protos/Enums/FrozenState.proto";
import "Protos/Messages/KingpinState.proto";

package gaapicommon.messages;
option csharp_namespace = "GAAPICommon.Messages";

message FleetState {
	repeated KingpinState KingpinStates = 1;
	int32 Tick = 2;
	gaapicommon.enums.FrozenState FrozenState = 3;
}