syntax = "proto3";

import "Protos/Messages/SpeedDemand.proto";

package gaapicommon.messages;
option csharp_namespace = "GAAPICommon.Messages";

message KeyedSpeedDemand {
	int32 Tick = 1;
	gaapicommon.messages.SpeedDemand SpeedDemand = 2;
	string Guid = 3;
}