syntax = "proto3";

import "Protos/Enums/JobStatus.proto";
import "Protos/Enums/JobPriority.proto";
import "Protos/Enums/TaskStatus.proto";
import "Protos/Enums/TaskType.proto";

package gaapicommon.services.jobs;
option csharp_namespace = "GAAPICommon.Services.Jobs";

// JobStateService

service JobStateService {
	rpc GetCurrentJobSummaryForAgentId (GetCurrentJobSummaryForAgentIdRequest) returns (GetCurrentJobSummaryForAgentIdResult);
	rpc GetJobSummary (GetJobSummaryRequest) returns (GetJobSummaryResult);
	rpc GetParentJobSummaryFromTaskId (GetParentJobSummaryFromTaskIdRequest) returns (GetParentJobSummaryFromTaskIdResult);
	rpc Subscribe(JobStateSubscribeRequest) returns (stream JobProgress);
}

// Message Parameters

message GetCurrentJobSummaryForAgentIdRequest {
	int32 AgentId = 1;
}

message GetJobSummaryRequest {
	int32 JobId = 1;
}

message GetParentJobSummaryFromTaskIdRequest {
	int32 TaskId = 1;
}

message JobStateSubscribeRequest { }

// Message Returns

message GetCurrentJobSummaryForAgentIdResult {
	string ExceptionMessage = 1;
	string ExceptionSource = 2;
	string ExceptionStackTrace = 3;
	JobSummary Value = 4;
	int32 ServiceCode = 5;
}

message GetJobSummaryResult {
	string ExceptionMessage = 1;
	string ExceptionSource = 2;
	string ExceptionStackTrace = 3;
	JobSummary Value = 4;
	int32 ServiceCode = 5;
}

message GetParentJobSummaryFromTaskIdResult {
	string ExceptionMessage = 1;
	string ExceptionSource = 2;
	string ExceptionStackTrace = 3;
	JobSummary Value = 4;
	int32 ServiceCode = 5;
}

// Data Objects

message JobProgress {
	int32 AssignedAgentId = 1;
	int32 JobId = 2;
	gaapicommon.enums.JobStatus JobStatus = 3;
}

message JobSummary {
	int32 AssignedAgentId = 1;
	string Description = 2;
	int32 JobId = 3;
	gaapicommon.enums.JobPriority JobPriority = 4;
	gaapicommon.enums.JobStatus JobStatus = 5;
	repeated string Notes = 6;
	int32 RootOrderedListTaskId = 7;
	repeated TaskSummary TaskSummaries = 8;
}

message TaskSummary {
	RoadMapItemTaskSummary RoadMapItemTaskSummary = 1;
	int32 ParentTaskId = 2;
	int32 TaskId = 3;
	gaapicommon.enums.TaskStatus TaskStatus = 4;
	gaapicommon.enums.TaskType TaskType = 5;
}

message RoadMapItemTaskSummary {
	int32 RoadMapItemId = 1;
}